src/test/ui/macros/nonterminal-matching.stderr
error: no rules expected the token `enum E { }`
  --> $DIR/nonterminal-matching.rs:19:10
   |
LL |     macro n(a $nt_item b) {
   |     --------------------- when calling this macro
...
LL |     n!(a $nt_item b);
   |          ^^^^^^^^ no rules expected this token in macro call
...
LL | complex_nonterminal!(enum E {});
   | -------------------------------- in this macro invocation

error: aborting due to previous error

